# http-server

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  dev.sh  hs.xmind
.github/workflows/: docker-readme.yml  docker.yml  release.yml
.history/: Cargo_20221202063650.toml
.history/src/: main_20221202063211.rs  main_20221202063415.rs  main_20221202063423.rs  main_20221202063710.rs  main_20221202063720.rs  main_20221202063735.rs  main_20221202063821.rs  main_20221202063825.rs  main_20221202063829.rs  main_20221202063931.rs  main_20221202071136.rs  main_20221202071432.rs  main_20221202071441.rs  main_20221202071804.rs  main_20221202071827.rs  main_20221202072135.rs  main_20221202072143.rs
benchmark/: README.md
docs/: install
examples/index/bar/foo/: foo.txt
nginx/: nginx.conf  test.conf
src/: cli.rs  logger.rs  main.rs  proxy.rs  reverse_proxy.rs  server.rs  ws_proxy.rs
templates/: list.html
