[package]
name = "hs"
version = "0.1.0"
edition = "2021"
# author = "erguotou525@gmail.com"
# about = "A http server with best practice for morden web application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
actix-web = "4.5.1"
actix-files = "0.6.5"
local-ip-address = "0.6.1"
askama = "0.12.1"
chrono = "0.4.38"
open = "5.1.2"
actix-web-httpauth = "0.8.1"
