[package]
name = "hs"
version = "0.1.6"
edition = "2021"
author = "erguotou525@gmail.com"
about = "A http server with best practice for modern web application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target-dir = "src"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
actix-web = { version = "4.5.1", features = ["rustls"] }
actix-files = "0.6.5"
local-ip-address = "0.6.1"
askama = "0.12.1"
chrono = "0.4.38"
open = "5.1.2"
actix-web-httpauth = "0.8.1"
fancy-regex = "0.13.0"
env_logger = "0.11.3"
actix-multipart = "0.6.1"
awc = { version = "3.5.0", features = ["rustls"] }
url = "2.5.0"
actix = "0.13.3"
actix-web-actors = "4.3.0"
bytes = "1.6.0"
futures = "0.3.30"
log = "0.4.21"
